--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rxjs": "~6.6.0",
     "socket.io": "^3.0.5",
     "tslib": "^2.0.0",
+    "webpack": "^4.44.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
